--- a/components/AppDevelopmentCommon/CardsSection/styles/devopsDevelopmentCompany.scss
+++ b/components/AppDevelopmentCommon/CardsSection/styles/devopsDevelopmentCompany.scss
@@ -108,6 +108,8 @@
   }
 
   &.fifthSectionView {
+    @extend .greySection;
+
     @include iconsWithinCircle;
 
     .titleStyle {
